--- a/plant-shop-app/src/app/app.component.html
+++ b/plant-shop-app/src/app/app.component.html
@@ -1,6 +1,26 @@
-<nav>
-  <a routerLink="/register">Register</a>
-  <a routerLink="/login">Login</a>
-  <a routerLink="/products">Products</a>
-  <a routerLink="/orders">Orders</a>
-</nav>
+<div class="container-fluid">
+  <div class="row">
+    <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
+      <div class="position-sticky">
+        <ul class="nav flex-column">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/products" routerLinkActive="active">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/orders" routerLinkActive="active">Orders</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+    </main>
+  </div>
+</div>
+
