--- a/plant-shop-app/src/app/login/login.component.html
+++ b/plant-shop-app/src/app/login/login.component.html
@@ -1,13 +1,13 @@
 <h2>Login</h2>
 <form (ngSubmit)="login()">
-  <div>
-    <label>Username:</label>
-    <input [(ngModel)]="credentials.username" name="username" required>
+  <div class="mb-3">
+    <label for="username" class="form-label">Username:</label>
+    <input id="username" [(ngModel)]="credentials.username" name="username" class="form-control" required>
   </div>
-  <div>
-    <label>Password:</label>
-    <input [(ngModel)]="credentials.password" name="password" type="password" required>
+  <div class="mb-3">
+    <label for="password" class="form-label">Password:</label>
+    <input id="password" [(ngModel)]="credentials.password" name="password" type="password" class="form-control" required>
   </div>
-  <button type="submit">Login</button>
+  <button type="submit" class="btn btn-primary">Login</button>
 </form>
 
