--- a/plant-shop-app/src/app/order-list/order-list.component.html
+++ b/plant-shop-app/src/app/order-list/order-list.component.html
@@ -1,7 +1,8 @@
 <h2>Orders</h2>
-<ul>
-  <li *ngFor="let order of orders">
+<ul class="list-group">
+  <li class="list-group-item" *ngFor="let order of orders">
     Order ID: {{ order.id }} - Total: {{ order.total | currency }}
   </li>
 </ul>
+
 
