--- a/plant-shop-app/src/app/product-list/product-list.component.html
+++ b/plant-shop-app/src/app/product-list/product-list.component.html
@@ -1,7 +1,8 @@
 <h2>Products</h2>
-<ul>
-  <li *ngFor="let product of products">
+<ul class="list-group">
+  <li class="list-group-item" *ngFor="let product of products">
     {{ product.name }} - {{ product.price | currency }}
   </li>
 </ul>
+
 
