--- a/plant-shop-app/src/app/register/register.component.html
+++ b/plant-shop-app/src/app/register/register.component.html
@@ -1,26 +1,27 @@
 <h2>Register</h2>
 <form (ngSubmit)="register()">
-  <div>
-    <label>Username:</label>
-    <input [(ngModel)]="user.username" name="username" required>
+  <div class="mb-3">
+    <label for="username" class="form-label">Username:</label>
+    <input id="username" [(ngModel)]="user.username" name="username" class="form-control" required>
   </div>
-  <div>
-    <label>Password:</label>
-    <input [(ngModel)]="user.password" name="password" type="password" required>
+  <div class="mb-3">
+    <label for="password" class="form-label">Password:</label>
+    <input id="password" [(ngModel)]="user.password" name="password" type="password" class="form-control" required>
   </div>
-  <div>
-    <label>Email:</label>
-    <input [(ngModel)]="user.email" name="email" required>
+  <div class="mb-3">
+    <label for="email" class="form-label">Email:</label>
+    <input id="email" [(ngModel)]="user.email" name="email" class="form-control" required>
   </div>
-  <div>
-    <label>Name:</label>
-    <input [(ngModel)]="user.name" name="name" required>
+  <div class="mb-3">
+    <label for="name" class="form-label">Name:</label>
+    <input id="name" [(ngModel)]="user.name" name="name" class="form-control" required>
   </div>
-  <div>
-    <label>Surname:</label>
-    <input [(ngModel)]="user.surname" name="surname" required>
+  <div class="mb-3">
+    <label for="surname" class="form-label">Surname:</label>
+    <input id="surname" [(ngModel)]="user.surname" name="surname" class="form-control" required>
   </div>
-  <button type="submit">Register</button>
+  <button type="submit" class="btn btn-primary">Register</button>
 </form>
+
 
 
